public-info/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: public-info
spec:
  replicas: 2
  selector:
    matchLabels:
      app: public-info
  template:
    metadata:
      labels:
        app: public-info
    spec:
      containers:
        - name: public-info
          image: pearlharbor22/public-info:1.0
          ports:
            - containerPort: 8091
          livenessProbe:
            tcpSocket:
              port: 8091
            initialDelaySeconds: 60
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8091
            initialDelaySeconds: 30
            periodSeconds: 5
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
