public-info/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: public-info-service
spec:
  selector:
    app: public-info
  ports:
    - protocol: TCP
      port: 8091
      targetPort: 8091
